projects/camunda/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: camunda
  labels:
    istio-injection: enabled
