projects/camunda/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: zeebe-worker
spec:
  restartPolicy: Always
  containers:
  - name: zeebe-worker
    image: josepht96/zeebe-worker:v1
    imagePullPolicy: Always
    resources: {}
