projects/camunda/k8s/zw.yaml
apiVersion: v1
kind: Pod
metadata:
  name: zeebe-worker
  labels:
    app: zeebe-worker
spec:
  restartPolicy: Always
  containers:
  - name: zeebe-worker
    image: josepht96/zeebe-worker-stress-test:v1
    imagePullPolicy: Always
    resources: {}
    ports:
    - containerPort: 8080
