projects/camunda/k8s/istio.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: zeebe-ra
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: zeebe-gateway
  jwtRules:
  - issuer: "http://camunda-keycloak/auth/realms/camunda-platform"
    forwardOriginalToken: true
    jwks: |
      {"keys":[{"kid":"qAOWuNJG9AZBQUHVyvcPayMYoZ5f0-USTlhMTfT-3cs","kty":"RSA","alg":"RS256","use":"enc","n":"hoySqDuMTnFsPp4_GDKfkwh853S97pRjMSKCKBTQ6dLnz-yK81xOeivEjfMlFC5KIX8yT2-iFVkYcLHwN1emdN5Bsdcrb3F_Ff7AqMSNociJmAtKb70dLVjG_xSGUZjlSrHq4DGsSYajGKs8qY4Qn2RBNTWntW_YNpqi6DBBIW816Tmv39xthkeKnBn8N6K-2h2mkSMx_N41C8AO0qYgLlh24ZBLiAvPU8XMP-ou5pPRW1Ge0OzwAfX5wq86uUpEGtHz16UBT3WyelZJxm1dt_Ofn8ngeZ6PmpqfBX9wQB5yFgKtJqX-NB3unvdzS-uydn1VoJw6Rl6dPp78CXu6RQ","e":"AQAB","x5c":["MIICrzCCAZcCBgGGg7KYJjANBg [...]

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: zeebe-ap
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: zeebe-gateway
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    # - source:
    #     namespaces: ["camunda"]
---

# kind: AuthorizationPolicy
# apiVersion: security.istio.io/v1beta1
# metadata:
#   name: zeebe-ap-deny-all
#   namespace: camunda
# spec:
#   selector:
#     matchLabels:
#       app.kubernetes.io/component: zeebe-gateway
#   action: DENY
#   rules:
#     - from:
#         - source:
#             # if validation fails, principal will be empty, so it wont match "*"
#             notRequestPrincipals: ["*"]
#       to:
#         - operation:
#             hosts: 
#             - camunda-zeebe-gateway
#             - camunda-zeebe-gateway.camunda.svc.cluster.local
#             ports:
#             - "26500"
#             - "9200"
# ---

# kind: AuthorizationPolicy
# apiVersion: security.istio.io/v1beta1
# metadata:
#   name: ext-authz-oauth2-allow
#   namespace: camunda
# spec:
#   selector:
#     matchLabels:
#       app.kubernetes.io/component: zeebe-gateway
#   action: ALLOW
#   rules:
#   - from:
#       - source:
#           requestPrincipals: ["*"]
#     to:
#       - operation:
#           hosts: ["camunda-zeebe-gateway:26500"]
#           notPaths: ["/auth/*","/identity/*"]
# ---
